<resources>
    <string name="app_name">NoteAppKtorServer</string>

    <string name="on_num">One Number Needed at Least</string>
    <string name="min_password">Password should include 1Capital letter, 1 Number, and min 8 character, special character are not allowed</string>
    <string name="password_empty">Please , enter your password</string>
    <string name="cap_letter">1 Capital letter Needed At Least</string>
    <string name="pass_charecters">Password must > 8 characters</string>
    <string name="pass_no_spec_charecters">Special characters are not allowed</string>
    <string name="my_note">My Note</string>

    <string name="search_note">Search notes</string>

    <string name="note_title">Note Title</string>

    <string name="note_subtitle">Note Subtitle</string>

    <string name="type_note_here">Type Note Here...</string>

    <string name="add_miscellaneous">Add Miscellaneous</string>


    <string name="pick_color">

<u>Pick Color</u>

</string>

    <string name="add_image_bottom_sheet">Add Image</string>

    <string name="add_url_bottom_sheet">Add URL</string>

    <string name="copy_text_bottom_sheet">Copy</string>

    <string name="delete_note_bottom_sheet">Delete Note</string>

    <string name="add_url_dialog">Add Url</string>

    <string name="delete_note">Delete Note</string>
    <string name="delete_note_success">Successfully Deleted Note</string>

    <string name="delete_url">Delete Url</string>

    <string name="delete_image">Delete Image</string>

    <string name="description_delete_note">Are you sure you want to delete this note?</string>

    <string name="description_delete_url">Are you sure you want to delete this url?</string>

    <string name="description_delete_image">Are you sure you want to delete this image?</string>

    <string name="url">Enter Url</string>

    <string name="cancel">Cancel</string>

    <string name="add">Add</string>

    <string name="confirm">Confirm</string>
    <string name="input_title_empty">The title must not be empty</string>
    <string name="input_subtitle_empty">The subtitle must not be empty</string>
    <string name="save_note">Successfully Saved Note </string>
    <string name="permission_denied">Permission denied</string>
    <string name="error_titlenote_too_short">The title can\'t have less than %d characters</string>

    <string name="error_titlenote_too_long">The title can\'t have more than %d characters</string>

    <string name="error_subtille_too_short">The  subtitle can\'t have less than %d characters</string>

    <string name="error_subtitle_too_long">The  subtitle can\'t have more than %d characters</string>
    <string name="denied_message"><![CDATA[If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]]]></string>
    <string name="web_link_empty">Url must not empty</string>
    <string name="invalid_web_link">Please, Enter a valid url</string>
    <string name="input_note_empty">Content note must be not empty</string>
    <string name="update_note">Successfully Updated Note</string>
    <string name="text_copied">Successfully Copied Note</string>
    <string name="empty_note">No Notes</string>
</resources>