<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_8sdp"
    android:elevation="@dimen/_3sdp"
    android:background="@drawable/background_note"
    app:cardBackgroundColor="@color/colorNote5"
    app:cardCornerRadius="@dimen/_10sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAddUrl"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/text_add_url_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/add_url_dialog"
            android:includeFontPadding="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageAddUrl"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_url"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@null"
            android:hint="@string/url"
            android:imeOptions="actionDone"
            android:fontFamily="@font/rta_regular"
            android:gravity="center_vertical"
            android:padding="@dimen/_8sdp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_12ssp"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textUri"
            app:layout_constraintBottom_toTopOf="@id/btCancel"
            app:layout_constraintTop_toBottomOf="@id/text_add_url_dialog" />



        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12ssp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btAdd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12ssp"
            android:layout_marginStart="@dimen/_15sdp"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>