<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/back_icon"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcon" />

            <ImageView
                android:id="@+id/ic_save"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/background_save_button"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"

                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/ic_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/ic_back"
                app:tint="@color/colorIcon" />

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:fontFamily="@font/poppins_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintTop_toBottomOf="@id/ic_back" />

            <TextView
                android:id="@+id/text_data_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rta_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcon"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/input_title"
                app:layout_constraintStart_toStartOf="@id/input_title"
                app:layout_constraintTop_toBottomOf="@id/input_title" />

            <EditText
                android:id="@+id/input_subTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:cursorVisible="true"
                android:fontFamily="@font/brandon_medium"
                android:hint="@string/note_subtitle"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingStart="@dimen/_16sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_indicator"
                app:layout_constraintTop_toBottomOf="@id/text_data_time" />

            <View
                android:id="@+id/view_indicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_indicator"
                app:layout_constraintBottom_toBottomOf="@id/input_subTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/input_subTitle" />


            <ImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:adjustViewBounds="true"
                android:layout_marginBottom="@dimen/_15sdp"
                 app:layout_constraintBottom_toTopOf="@+id/textUrl"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_indicator" />

            <ImageView
                android:id="@+id/delete_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/ic_baseline_delete_forever_24"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote" />

            <ImageView
                android:id="@+id/delete_uri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@drawable/ic_baseline_delete_forever_24"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_12sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/textUrl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textUrl" />

            <TextView
                android:id="@+id/textUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:autoLink="web"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/imageNote"
                app:layout_constraintTop_toBottomOf="@id/imageNote" />

            <EditText
                android:id="@+id/input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/_100sdp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textUrl" />

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ic_progress_create_note"
                app:layout_constraintTop_toTopOf="parent"
                  android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/layout_persistent_bottom_sheet" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>